--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.1.0",
+    "standard": "^17.0.0",
     "vite": "^4.2.1"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
